[project]
name = "minchroma2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "diffusers>=0.34.0",
    "einops>=0.8.1",
    "peft>=0.15.2",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
